ally-test update

--- a/a11y-test.html
+++ b/a11y-test.html
@@ -6,28 +6,24 @@
 </head>
 <body>
   <div>
-    <h1>My Title</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <img src="catimage.jpg" alt="imagen gatito">
-    <ul>
-      <li>- a list if things </li>
-      <li>- a list if things </li>
-      <li>- a list if things </li>
-      <li>- a list if things </li>
-      <li>- a list if things </li>
-    <form action="#">
-        <fieldset>
-            <legend>Contact me</legend>  
-            <label for="email"></label>
-            <input type="email" name="email" autocomplete="email">
-            <button>lets go</button>
-        </fieldset>
-    </form>
-  </div>
+    <div class="info">
+      <h1>Title</h1>
+      <p class="summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p id="parrafopla">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>    
+      <button>"Click Me!"</button>
+    </div>
+  <div>
+  
 </body>
 </html>
